--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,15 @@ input {
   transform: translateY(2px);
 }
 
+.actions button,
+.list select {
+  text-transform: uppercase;
+  padding: 0.8rem 2.4rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin: 0 0.8rem;
+}
+
 input[type="checkbox"] {
   height: 2rem;
   width: 2rem;
