--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,10 @@ input {
   align-content: start;
 }
 
+.list ul::-webkit-scrollbar {
+  width: 0;
+}
+
 .list li {
   display: flex;
   align-items: center;
